--- a/XMLTaskKJSPMW/MasodikFeladat/domparseKJSPMW/.project
+++ b/XMLTaskKJSPMW/MasodikFeladat/domparseKJSPMW/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>XsltKJSPMW</name>
+	<name>domparseKJSPMW</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1701809433152</id>
+			<id>1701810601836</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
